# ray-tracer

./: CMakeLists.txt  README.md  run.sh
src/: camera.cpp  camera.h  color.h  hittable.h  hittable_list.h  interval.h  main.cpp  material.cpp  material.h  ray.h  renderer.cpp  renderer.h  scene.cpp  scene.h  sphere.h  utilities.h  vec3.cpp  vec3.h
